@@ -69,7 +69,7 @@ VParseBison.h: VParseBison.cpp
 VParseBison.cpp:	VParseBison.y bisonpre
 	-$(RM_RF) VParseBison.c VParseBison.cpp
 	@echo "If the next command fails, you probably need to install Bison 1.875 or newer"
-	$(PERL) bisonpre --yacc ${YACC} --debug --verbose --d -k VParseBison.y -p VParseBison -o VParseBison.c
+	$(PERL) bisonpre --yacc ${YACC} --debug --verbose --d -k VParseBison.y -o VParseBison.c
 	mv VParseBison.c VParseBison.cpp
 
 Parser_cleaned.c: Parser.c
