@@ -17,6 +17,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix documentation on ports_ordered, bug66.  [Nicky Ayoub]
 
+****	Fix Bison 2.4 compile issues.
+
 * Verilog::Language 3.110 2009/1/28
 
 **	Support interface and import. [by Sandeep Gor]
